[package]
name = "rust_plotter_histo_multi_line"
version = "0.1.0"
edition = "2021"

[dependencies]
cargo-watch = "8.5.2"
# chrono = "0.4.10"
chrono = "0.4.10"
csv = "1.3.0"
decimal = "2.1.0"
plotters = "0.3.6"
rand = "0.8.5"
rust_decimal = "1.35.0"
rust_decimal_macros = "1.35.0"
rustfmt = "0.10.0"

